--- a/MyCvWebsite/MyCvWebsite/MyCvWebsite.csproj
+++ b/MyCvWebsite/MyCvWebsite/MyCvWebsite.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Content Include="wwwroot\AcademicWork_juni_2017_001.png" />
     <Content Include="wwwroot\Css\MySheet.css" />
+    <Content Include="wwwroot\linkedin-logo-1.png" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
